--- a/style/dark_theme/table_view.qss
+++ b/style/dark_theme/table_view.qss
@@ -6,7 +6,7 @@ QTableView {
     background-color: #1e1e1e;
     color: #e0e0e0;
     alternate-background-color: #2a2a2a;
-    gridline-color: #444;
+    gridline-color: #444444;
     border: none;
     selection-background-color: #4a90e2;
     selection-color: white;
@@ -34,9 +34,14 @@ QHeaderView::section {
     background-color: #2c2c2c;
     color: white;
     padding: 4px;
-    border: 1px solid #444;
+    border: 1px solid #444444;
 }
 
 QHeaderView::section:hover {
     background-color: #3e3e3e;
+}
+
+QTableView::item:selected {
+    background-color: #2e6fa1;
+    color: white;
 }
