--- a/style/dark_theme/combo_box.qss
+++ b/style/dark_theme/combo_box.qss
@@ -1,17 +1,17 @@
 QComboBox {
-    background-color: #2c2c2c;
-    color: white;
-    border: 1px solid #555;
+    background-color: #1d2d44;
+    color: #f0ebd8;
+    border: 1px solid #3e5c76;
     padding: 4px;
 }
 
 QComboBox QAbstractItemView {
-    background-color: #2c2c2c;
-    color: white;
-    selection-background-color: #4a90e2;
-    selection-color: white;
+    background-color: #1d2d44;
+    color: #f0ebd8;
+    selection-background-color: #748cab;
+    selection-color: #0d1321;
 }
 
 QComboBox QAbstractItemView::item:hover {
-    background-color: #3e3e3e;
+    background-color: #3e5c76;
 }
