--- a/style/dark_theme/combo_box.qss
+++ b/style/dark_theme/combo_box.qss
@@ -1,17 +1,28 @@
 QComboBox {
-    background-color: #1d2d44;
+    background-color: #26272c;
     color: #f0ebd8;
-    border: 1px solid #3e5c76;
+    border: 1px solid #3a3b40;
+    border-radius: 8px;
     padding: 4px;
 }
-
+QComboBox:hover {
+    background-color: #3e5c76;
+}
+QComboBox:pressed {
+    background-color: #748cab;
+    color: #0d1321;
+}
 QComboBox QAbstractItemView {
-    background-color: #1d2d44;
+    background-color: #23242a;
     color: #f0ebd8;
     selection-background-color: #748cab;
     selection-color: #0d1321;
+    border-radius: 8px;
 }
-
 QComboBox QAbstractItemView::item:hover {
     background-color: #3e5c76;
+}
+QComboBox QAbstractItemView::item:pressed {
+    background-color: #748cab;
+    color: #0d1321;
 }
