--- a/style/dark_theme/combo_box.qss
+++ b/style/dark_theme/combo_box.qss
@@ -3,15 +3,29 @@ QComboBox {
     color: #f0ebd8;
     border: none;
     border-radius: 8px;
-    padding: 4px;
+    padding: 2px 4px;
 }
+
 QComboBox:hover {
-    background-color: #3e5c76;
+    background-color: #4a6fa5;
 }
+
 QComboBox:pressed {
     background-color: #748cab;
     color: #0d1321;
 }
+
+QComboBox:focus {
+    background-color: #4a6fa5;
+    outline: none;
+}
+
+/* Fix για το right-click problem - εξασφαλίζει ότι θα γυρίσει στο normal state */
+QComboBox:!focus:!hover {
+    background-color: #2a2a2a;
+    color: #f0ebd8;
+}
+
 QComboBox::drop-down {
     subcontrol-origin: padding;
     subcontrol-position: top right;
@@ -19,9 +33,11 @@ QComboBox::drop-down {
     border: none;
     border-radius: 0px;
 }
+
 QComboBox::drop-down:hover {
-    background-color: #3e5c76;
+    background-color: #4a6fa5;
 }
+
 QComboBox::down-arrow {
     image: none;
     border-left: 4px solid transparent;
@@ -30,23 +46,7 @@ QComboBox::down-arrow {
     width: 0px;
     height: 0px;
 }
-QComboBox QAbstractItemView {
-    background-color: #2a2a2a;
-    color: #f0ebd8;
-    selection-background-color: #748cab;
-    selection-color: #0d1321;
-    border: none;
-    border-radius: 8px;
-}
-QComboBox QAbstractItemView::item {
-    padding: 4px;
-    border: none;
-}
-QComboBox QAbstractItemView::item:hover {
-    background-color: #3e5c76;
-    color: #f0ebd8;
-}
-QComboBox QAbstractItemView::item:selected {
-    background-color: #748cab;
-    color: #0d1321;
+
+QComboBox::down-arrow:hover {
+    border-top: 4px solid #ffffff;
 }
